infrastructure/k8s/data_loader_mongo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-loader
  template:
    metadata:
      labels:
        app: data-loader
    spec:
      containers:
        - name: data-loader
          image: chaimshvadron/data_loader_mongo:V2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
