infrastructure/k8s/data_loader_mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-loader
spec:
  selector:
    app: data-loader
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
